@startuml


class HomeSequencer
{
    
}

class UIMenuListContainer
{
}

package MenuList
{
    class UISoulLaboMenu
    {
    }
    
    class UISoulListMenu
    {
    }
    
    class UISoulSaleMenu
    {
    }
    
    class UIMenuList
    {
    }
}

package Page
{
    interface IPage
    {
    }

    interface ISoulPage
    {

    }
    
    class UISoulSalePage
    {
    }
    
    class UISoulListPage
    {
    }

    ISoulPage --u|> IPage
    UISoulListPage --u|> ISoulPage
    UISoulSalePage --u|> ISoulPage
}

class UserSoulList
{

}

class SoulSaleApplicationService
{

}
SoulSaleApplicationService --> UISoulSalePage
SoulSaleApplicationService --> UserSoulList


class NestedMenuController
{
}

class PageRepository
{

}

HomeSequencer --> NestedMenuController
HomeSequencer --> PageRepository
HomeSequencer --> SoulSaleApplicationService
PageRepository --> IPage
NestedMenuController --> UIMenuListContainer
UIMenuListContainer --> UIMenuList
UISoulLaboMenu --u|> UIMenuList
UISoulSaleMenu --u|> UIMenuList
UISoulListMenu --u|> UIMenuList
UIMenuList -> IPage

@enduml